load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "echobot",
    srcs = ["echobot.c"],
    tags = ["no-windows"],
    deps = [
        "//c-toxcore",
        "@libsodium",
    ],
)

sh_test(
    name = "echobot_test",
    size = "small",
    srcs = [":echobot"],
    args = ["--help"],
    tags = ["no-windows"],
)
