load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "irc_syncbot",
    srcs = ["irc_syncbot.c"],
    tags = ["no-windows"],
    deps = [
        "//c-toxcore",
        "//toxins/util:misc_tools",
    ],
)

sh_test(
    name = "irc_syncbot_test",
    size = "small",
    srcs = [":irc_syncbot"],
    args = ["--help"],
    tags = ["no-windows"],
)
