load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "tox_shell",
    srcs = ["tox_shell.c"],
    linkopts = ["-lutil"],
    tags = ["no-windows"],
    deps = [
        "//c-toxcore",
        "//toxins/util:misc_tools",
    ],
)

sh_test(
    name = "tox_shell_test",
    size = "small",
    srcs = [":tox_shell"],
    args = ["--help"],
    tags = ["no-windows"],
)
