load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "tox_sync",
    srcs = ["tox_sync.c"],
    tags = ["no-windows"],
    deps = [
        "//c-toxcore",
        "//toxins/util:misc_tools",
    ],
)

sh_test(
    name = "tox_sync_test",
    size = "small",
    srcs = [":tox_sync"],
    args = ["--help"],
    tags = ["no-windows"],
)
